# yoloworld.axera

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_aarch64.sh
.github/workflows/: build.yml
include/: ax_devices.h  yoloworld.h
pyyoloworld/: example.py  gradio_example.py  pyaxdev.py  pyyoloworld.py  requirements.txt
src/: CLIPTextEncoder.hpp  CLIPTextEncoderAX650.hpp  Tokenizer.hpp  ax_devices.cpp  yoloworld.cpp
src/runner/: ax_model_runner.hpp
src/runner/ax650/: ax_api_loader.h  ax_model_runner_ax650.cpp  ax_model_runner_ax650.hpp
src/runner/ax_type_header/: axcl_base.h  axcl_rt_type.h
src/runner/axcl/: ax_model_runner_axcl.cpp  ax_model_runner_axcl.hpp  axcl_manager.cpp  axcl_manager.h  axcl_manager.hpp  axclrt_api_loader.h
src/utils/: enum_devices.cpp  enum_devices.hpp  mmap.hpp
tests/: test_ax_api.cpp  test_axcl_api.cpp  test_detect_by_text.cpp  test_enum_devices.cpp  test_load_model.cpp
